engr441/while-infer/tests/valid/ArrayAssign_Valid_3.while
int[][] f(int i) {
    int[] arr1 = [1,2,64];
    int[] arr2 = arr1;
    if(i != |arr1|) {
        arr2[2] = 3;
    } else {
        arr2[2] = i;
    }
    return [arr1,arr2];
}

void main() {
     assert [[1,2,64],[1,2,3]] == f(2);
     assert [[1,2,64],[1,2,3]] == f(3);     
}
