engr441/while-infer/tests/invalid-typing/Typing_Invalid_40.while
int f(void[] xs) {
     return 1;
}